# rodledger

./: .gitignore  DESIGN.md  README.md
.docs/: RodLedger_beta_spec.md  frontend-svelte.md  update.md
.docs/design_sample/: ethereal_ledger.html  inbound_entry.html  outbound_return_entry.html  transaction_history.html
.playwright-mcp/: page-2026-04-03T05-44-32-276Z.yml
backend/: pyproject.toml
backend/app/: __init__.py  database.py  main.py
backend/app/api/: transactions.py
backend/app/models/: models.py
backend/app/services/: inventory_service.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: PaginationBar.svelte  api.js  lastStockLocationPreference.js  lotLocationStock.js  lotSort.js  pagination.js  quantityInput.js  shelfDisplay.js  weightInput.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/history/: +page.svelte
frontend/src/routes/in/: +page.svelte
frontend/src/routes/lots/: +page.svelte
frontend/src/routes/transfer/: +page.svelte
frontend/static/: manifest.webmanifest
tests/: test_inventory_effective_stock.py  test_lot_merge_on_update.py  test_lot_reset.py  test_lot_unit_price_compare.py  test_lot_update.py  test_shelf_number.py
